Fix dataTable search input styling in dark mode

--- a/inst/templates/downcute/downcute.css
+++ b/inst/templates/downcute/downcute.css
@@ -1099,6 +1099,12 @@ button.code-folding-btn {
     color: var(--text-color) !important;
 } 
 
+.page-content .dataTables_wrapper input[type='search'] {
+    border-color: var(--border-color);
+    background: var(--page-background);
+    color: var(--text-color);
+}
+
 .page-content .pagedtable-index-current {
     font-weight: bold;
 }
